--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,11 +1,13 @@
---2019-06-23 22:41:36--  https://raw.githubusercontent.com/svenfuchs/rails-i18n/master/rails/locale/ja.yml
-raw.githubusercontent.com (raw.githubusercontent.com) をDNSに問いあわせています... 151.101.108.133
-raw.githubusercontent.com (raw.githubusercontent.com)|151.101.108.133|:443 に接続しています... 接続しました。
-HTTP による接続要求を送信しました、応答を待っています... 200 OK
-長さ: 5117 (5.0K) [text/plain]
-`ja.yml' に保存中
-
-     0K ....                                                  100% 17.1M=0s
-
-2019-06-23 22:41:36 (17.1 MB/s) - `ja.yml' へ保存完了 [5117/5117]
-
+ja:
+     activerercord:
+          errors:
+               messages:
+                    record_invalid: "バリデーションに失敗しました: %{errors}"
+                    restrrict_dependent_destroy:
+                         has_one: "%{record}が存在しているので削除できません"
+                         has_many: "%{record}が存在しているので削除できません"
+          models:
+               task: タスク
+          attributes:
+               task:
+                    
