--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,7 @@ ja:
                description: 詳しい説明
                created_at: 登録日時
                updated_at: 更新日時
+               user_id: ユーザID
      helpers:
           select:
                prompt: 選択してください
